@@ -260,7 +260,7 @@ public class GlobalVariableRefAnalyzer {
         if (!dependencyOrder.isEmpty()) {
             List<BSymbol> symbolsProvidersOrdered = this.dependencyOrder.stream()
                     .map(nodeInfo -> nodeInfo.symbol)
-                    .toList();
+                    .collect(Collectors.toList());
             this.dependencyOrder.clear();
             return symbolsProvidersOrdered;
         }
@@ -370,7 +370,7 @@ public class GlobalVariableRefAnalyzer {
             Collections.reverse(cycle);
             List<BSymbol> symbolsOfCycle = cycle.stream()
                     .map(n -> n.symbol)
-                    .toList();
+                    .collect(Collectors.toList());
 
             if (doesContainAGlobalVar(symbolsOfCycle)) {
                 emitErrorMessage(symbolsOfCycle);
@@ -403,7 +403,8 @@ public class GlobalVariableRefAnalyzer {
         secondSubList.addAll(firstSubList);
 
         List<BLangIdentifier> names = secondSubList.stream()
-                .map(this::getNodeName).filter(Objects::nonNull).toList();
+                .map(this::getNodeName).filter(Objects::nonNull)
+                .collect(Collectors.toList());
         dlog.error(firstNode.get().getPosition(), DiagnosticErrorCode.GLOBAL_VARIABLE_CYCLIC_DEFINITION, names);
     }
 
