@@ -39,6 +39,7 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * @since 0.94
@@ -214,7 +215,7 @@ public class BInvokableType extends BType implements InvokableType {
         }
         FunctionDefinition fd = new FunctionDefinition();
         this.defn = fd;
-        List<SemType> params = this.paramTypes.stream().map(BInvokableType::from).toList();
+        List<SemType> params = this.paramTypes.stream().map(BInvokableType::from).collect(Collectors.toList());
         return getSemTypeWithParams(params, fd);
     }
 
